@@ -5,10 +5,10 @@
 #
 #
 #
-ACLOCALMINVERSION=1.9
-AUTOMAKEMINVERSION=1.9
-AUTOHEADERMINVERSION=2.5
-AUTOCONFMINVERSION=2.5
+ACLOCALMINVERSION="1\.9"
+AUTOMAKEMINVERSION="1\.9"
+AUTOHEADERMINVERSION="2\.5"
+AUTOCONFMINVERSION="2\.5"
 
 ACLOCAL=`which aclocal`
 AUTOCONF=`which autoconf`
